fix some layout issues

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -3,7 +3,7 @@
 footer {
   background-color: $grey;
 
-  padding: 1rem;
+  padding: 1rem 0;
 
   color: black;
   font-size: 1.6rem;
