--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,7 +3,7 @@
 header {
   background-color: $blue;
 
-  padding: 1rem;
+  padding: 1rem 0;
 
   color: white;
   font-size: 1.6rem;
